--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.13",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
